<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/drone_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drone_name"/>

    <TextView
        android:id="@+id/drone_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drone_lat"/>

    <TextView
        android:id="@+id/drone_lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drone_lon"/>

    <TextView
        android:id="@+id/drone_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drone_battery"/>

    <Button
        android:layout_gravity="center_horizontal"
        android:layout_width="100sp"
        android:layout_height="40sp"
        android:layout_marginTop="5sp"
        android:textSize="12sp"
        android:onClick="onClose"
        android:text="Close"/>

</LinearLayout>